remvoe index.html so README.md will render and change theme to dinky

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/readthedocs
+remote_theme: pages-themes/dinky
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
