--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
-remote_theme: pages-themes/dinky
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: OdbDesign
+title: OdbDesign ODB++ Parser
 description: REST API and C++ library for parsing ODB++ Design archives 
