--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag odbdesign:${{github.ref_name}}-${{github.run_number}}
+      run: docker build . --file Dockerfile_OdbDesignServer --tag odbdesign:${{github.ref_name}}-${{github.run_number}}
