--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,15 +52,15 @@ endif()
 
 # Include sub-projects.
 add_subdirectory("OdbDesignLib")
-add_subdirectory("OdbDesignApp")
+#add_subdirectory("OdbDesignApp")
 add_subdirectory("OdbDesignServer")
 add_subdirectory("Utils")
 
 # link to OdbDesign library in both executable targets
-target_link_libraries(OdbDesignApp PUBLIC OdbDesign)
+#target_link_libraries(OdbDesignApp PUBLIC OdbDesign)
 target_link_libraries(OdbDesignServer PUBLIC OdbDesign)
 
 # link to Utils lib in all targets
-target_link_libraries(OdbDesignApp PUBLIC Utils)
+#target_link_libraries(OdbDesignApp PUBLIC Utils)
 target_link_libraries(OdbDesignServer PUBLIC Utils)
 target_link_libraries(OdbDesign PUBLIC Utils)
