--- a/Dockerfile_OdbDesignServer
+++ b/Dockerfile_OdbDesignServer
@@ -11,9 +11,9 @@ RUN apt-get update && \
         cmake \            
         g++ \
         ninja-build \
-        python3-dev \     
+        # python3-dev \     
         # mingw-w64 \        
-        swig \
+        # swig \
         build-essential \
         git \
         cmake \
