link to OdbDesign library target inside both of the executable targets'  CMakeList.txts instead of in main project's CMakeList.txt

--- a/OdbDesignTests/CMakeLists.txt
+++ b/OdbDesignTests/CMakeLists.txt
@@ -6,5 +6,8 @@ add_executable(OdbDesignTests
 )
 target_link_libraries(OdbDesignTests PUBLIC GTest::gtest_main)
 
+# link to OdbDesign library
+target_link_libraries(OdbDesignTests PUBLIC OdbDesign)
+
 include(GoogleTest)
 gtest_discover_tests(OdbDesignTests)
