--- a/OdbDesignTests/CMakeLists.txt
+++ b/OdbDesignTests/CMakeLists.txt
@@ -4,10 +4,10 @@ add_executable(OdbDesignTests
   OdbDesignTests.h
   OdbDesignTests.cpp
 )
-target_link_libraries(OdbDesignTests PUBLIC GTest::gtest_main)
+target_link_libraries(OdbDesignTests PRIVATE GTest::gtest_main)
 
 # link to OdbDesign library
-target_link_libraries(OdbDesignTests PUBLIC OdbDesign)
+target_link_libraries(OdbDesignTests PRIVATE OdbDesign)
 
 include(GoogleTest)
 gtest_discover_tests(OdbDesignTests)
