--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "development" ]
 
 env:
-  VCPKG_ROOT: /~/src/github/microsoft/vcpkg
+  VCPKG_ROOT: /home/runner/vcpkg
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
+      # Set up a matrix to run the following configurations:
       # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
       # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>      
       #
@@ -54,8 +54,8 @@ jobs:
     # does not run vcpkg or install vcpkg dependencies
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
-      with:
-        vcpkgDirectory: ${{env.VCPKG_ROOT}}
+      # with:
+      #   vcpkgDirectory: ${{env.VCPKG_ROOT}}
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
