--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,7 +11,8 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  VCPKG_ROOT: /~/src/github/microsoft/vcpkg
+  VCPKG_ROOT: /home/root/src/github/microsoft/vcpkg
+  ## /root/src/github/microsoft/vcpkg/scripts/buildsystems/vcpkg.cmake
 
 jobs:
   build:
