--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install vcpkg
       run: |
         git clone https://github.com/Microsoft/vcpkg.git ${{env.VCPKG_ROOT}}}
-        ${{env.VCPKG_ROOT}}/vcpkg/bootstrap-vcpkg.sh    
+        ${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh    
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
