--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -4,7 +4,7 @@ name: CMake on multiple platforms
 
 on:
   push:
-    branches: [ "development" ]
+    branches: [ "development", "main" ]
   pull_request:
     branches: [ "development" ]
 
@@ -32,35 +32,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    # - name: Set reusable strings
-    #   # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
-    #   id: strings
-    #   shell: bash
-    #   run: |
-    #     echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+    - uses: seanmiddleditch/gha-setup-ninja@master
 
     # Install vcpkg
     - name: Install vcpkg
       run: |
         git clone https://github.com/Microsoft/vcpkg.git ${{env.VCPKG_ROOT}}
-        ${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh    
-
-
+        ${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh
+        
     - name: Configure
-      run: cmake --preset ${{matrix.preset}}        
-    # - name: Configure CMake
-    #   # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-    #   # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-    #   run: >
-    #     cmake -B ${{ steps.strings.outputs.build-output-dir }}
-    #     -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-    #     -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-    #     -S ${{ github.workspace }}
+      run: cmake --preset ${{matrix.preset}}            
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      #run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
       run: cmake --preset ${{matrix.preset}} --build  
 
     # - name: Test
