--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Add cl To Path
       run: |
-        dir ${{env.CL_PATH}}}
+        dir ${{env.CL_PATH}}
         echo ${{env.CL_PATH}} >> $GITHUB_PATH
         set | findstr "MSVC"        
         cl
