--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Add cl To Path
       run: |
         dir ${{env.CL_PATH}}
-        echo ${{env.CL_PATH}} >> $GITHUB_PATH               
+        Add-Content $env:GITHUB_PATH ${{env.CL_PATH}}
         cl.exe
         echo %VCToolsInstallDir%
     
