--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   VCPKG_ROOT: ${{ github.workspace }}/vcpkg
-  CL_PATH: "\"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.37.32822\\bin\\Hostx64\\x64\""
+  #CL_PATH: "\"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.37.32822\\bin\\Hostx64\\x64\""
 
 jobs:
   build:
@@ -46,8 +46,10 @@ jobs:
     
     - name: Install vcpkg
       run: |               
-        git clone https://github.com/Microsoft/vcpkg.git ${{env.VCPKG_ROOT}}
-        ${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh
+        git clone --depth 1 https://github.com/Microsoft/vcpkg.git ${{env.VCPKG_ROOT}}
+        "${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh"
+      # only on linux (Windows comes w/ vcpkg installed as part of VS)   
+      if: matrix.os == 'ubuntu-22.04'
         
     - name: Configure
       run: cmake --preset ${{matrix.preset}}            
