--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,13 +42,13 @@ jobs:
     - uses: actions/checkout@v3            
     
     #
-    #   != windows-2022 (i.e. Linux, MacOS)
+    #   os != windows-2022 (i.e. Linux, MacOS)
     #
     - name: Install vcpkg
       run: |               
         git clone --depth 1 https://github.com/Microsoft/vcpkg.git ${{env.VCPKG_ROOT}}
         "${{env.VCPKG_ROOT}}/bootstrap-vcpkg.sh"
-      # on all non-Windows os's (Windows comes w/ vcpkg installed as part of VS)   
+      # (Windows comes w/ vcpkg installed as part of VS)   
       if: matrix.os != 'windows-2022'
     
     - name: Install Ninja    
@@ -56,7 +56,16 @@ jobs:
       if: matrix.os != 'windows-2022'
 
     #
-    #   == windows-2022
+    #   preset == linux-mingw-w64-release
+    #   
+    - name: Install APT Packages
+      uses: awalsh128/cache-apt-pkgs-action@v1.3.0
+      with:
+        packages: mingw-w64
+      if: matrix.preset == 'linux-mingw-w64-release'
+  
+    #
+    #   os == windows-2022
     #
     - name: Setup VC Tools
       uses: ilammy/msvc-dev-cmd@v1
@@ -75,9 +84,5 @@ jobs:
     - name: CMake Build          
       run: cmake --build --preset ${{matrix.preset}} 
 
-    - name: Test
-      #working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      #run: ctest --build-config ${{ matrix.build_type }}
+    - name: CMake Test
       run: ctest --preset ${{matrix.preset}}}
