fix extra brace in ctest command

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -91,4 +91,4 @@ jobs:
       run: cmake --build --preset ${{matrix.preset}} 
 
     - name: CMake Test
-      run: ctest --preset ${{matrix.preset}}}
+      run: ctest --preset ${{matrix.preset}} -V
