--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -72,13 +72,7 @@ jobs:
       if: matrix.os == 'windows-2022'
       
     - name: Patch vcpkg
-      run: | 
-        dir "${{env.VCPKG_ROOT}}"
-        dir "${{env.VCPKG_ROOT}}\scripts"
-        dir "${{env.VCPKG_ROOT}}\scripts\msys"
-        mkdir "${{env.VCPKG_ROOT}}\scripts\msys"
-        copy OdbDesign\scripts\patch\compile_wrapper_consider_clang-cl.patch "${{env.VCPKG_ROOT}}\scripts\msys\compile_wrapper_consider_clang-cl.patch"
-        scripts/patch-vcpkg-install.ps1
+      run: scripts/patch-vcpkg-install.ps1
       if: matrix.os == 'windows-2022'
     
     #
