--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -80,9 +80,10 @@ jobs:
     #
     - name: Generate SWIG Bindings
       run: | 
-        sudo apt get update
+        sudo apt-get update
         sudo apt-get install -y --no-install-recommends swig
         scripts/generate-python-module.sh
+      if: matrix.preset == 'python-linux-release'
     
     #
     #   All platforms
