--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -94,7 +94,7 @@ jobs:
       if: matrix.preset == 'windows-2022'
 
     - name: Manual vcpkg Install (mingw-w64)
-      run: "\"${{env.VCPKG_ROOT}}/vcpkg\" install --triplet x64-mingw-static"
+      run: "\"${{env.VCPKG_ROOT}}/vcpkg\" install --triplet x64-mingw-dynamic"
       if: matrix.preset == 'linux-mingw-w64-release'
     
     #
