force x64-windows triplet on Windows manual vcpkg install step

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -90,7 +90,7 @@ jobs:
       if: matrix.preset != 'linux-mingw-w64-release' && matrix.os != 'windows-2022'
 
     - name: Manual vcpkg Install (Windows)
-      run: "& \"${{env.VCPKG_ROOT}}/vcpkg\" install"
+      run: "& \"${{env.VCPKG_ROOT}}/vcpkg\" install --triplet x64-windows"
       if: matrix.os == 'windows-2022'
 
     - name: Manual vcpkg Install (mingw-w64)
